--- a/changes.txt
+++ b/changes.txt
@@ -1,3 +1,7 @@
+v.1.2
+- Change program and stucture
+- Change software name to Lemasc USB Virus Remover Portable
+
 V.1.1 (Stable)
 - Remove Thai laungage
 - Add "QUICK REMOVE" Option
