Update to version 1.3
Add support to delete INF and FAT32 files

--- a/changes.txt
+++ b/changes.txt
@@ -1,3 +1,6 @@
+v.1.3
+- Add support to delete INF and FAT32 files
+
 v.1.2
 - Change program and stucture
 - Change software name to Lemasc USB Virus Remover Portable
